[tool.poetry]
name = "redis-cache"
version = "0.1.0"
description = "Simple python redis cache"
authors = ["Leo Liu <yuxuzi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
pandas = "^1.2.3"
redis = "^3.5.3"



[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"



